--- a/style.css
+++ b/style.css
@@ -11,17 +11,32 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  font-family: 'Courier New', Courier, monospace;
   font-size: 12px;
 }
 
-
+.player-container{
+  height: 500px;
+  width: 400px;
+  background: #e7e7e7;
+  border-radius: 20px;
+  box-shadow: 0 15px 30px 5px rgba(0,0,0,0.3);
+}
 
 .img-container {
-
+  height: 300px;
+  width: 300px;
   position: relative;
   top: -50px;
   left: 50px;
+}
+
+.img-container img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  box-shadow: 0 5px 30px 5px rgba(0,0,0,0.3);
 }
 
 
@@ -53,7 +68,7 @@ h3 {
   border-radius: 5px;
   height: 100%;
   /* change this to show progress */
-  width: 66%;
+  width: 0%;
   transition: width 0.1s linear;
 }
 
@@ -76,9 +91,13 @@ h3 {
   font-size: 30px;
   color: rgb(129, 129, 129);
   margin-right: 30px;
-
+  cursor: pointer;
+  user-select: none;
 }
 
+.fas:hover{
+  color: brightness(80%);
+}
 
 
 .main-button {
@@ -90,6 +109,9 @@ h3 {
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
 
+  .player-container{
+    width: 95vw;
+  }
 
   .img-container {
     left: 29px;
